most recent changes on july27

--- a/projects/mario-pest-control/index.html
+++ b/projects/mario-pest-control/index.html
@@ -12,7 +12,7 @@
     <!-- <div id="background">
         <img src="mushkingdom-copy.png">
     </div> -->
-    <form name="pricing">
+    <form id="myForm">
         <div>
             <div id="charImage">
                 <img src="https://vignette.wikia.nocookie.net/mario/images/b/b2/GoombaSM3DWArtwork.png/revision/latest?cb=20131111161124">
@@ -26,7 +26,7 @@
                 <img src="https://vignette.wikia.nocookie.net/mariokart/images/7/77/Bob-omb_%28Mario_Kart_Wii%29.png/revision/latest?cb=20170323004234">
             </div>
             <p>Bob-ombs: 7 Coins</p>
-            <input type="number" name="individual" value="bobombs">
+            <input type="number" name="individual2" value="bobombs">
         </div>
 
         <div>
@@ -34,10 +34,11 @@
                 <img src="https://vignette.wikia.nocookie.net/mario/images/c/c1/Cheep_Cheep%2C_New_Super_Mario_Bros._U.png/revision/latest?cb=20121106023911">
                 </div>
             <p>Cheep-cheeps: 11 Coins</p>
-            <input type="number" name="individual" value="cheeps">
+            <input type="number" name="individual3" value="cheeps">
         </div>
             <p><button id="button">See Total</button></p>
             <!-- This is where I'll put the output of the total -->
+            <p id="output"></p>
     </form>
     <footer>
         <p>mario@mushkingdom.com</p> 
