Finished Mario project and started on Business site project

--- a/projects/mario-pest-control/index.html
+++ b/projects/mario-pest-control/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Mario Pest Control</h1>
+    <h2>Enter number caught for each</h2>
     <!-- <div id="background">
         <img src="mushkingdom-copy.png">
     </div> -->
@@ -36,7 +37,7 @@
             <p>Cheep-cheeps: 11 Coins</p>
             <input type="number" name="individual3" value="cheeps">
         </div>
-            <p><button id="button">See Total</button></p>
+            <p><button id="button" onclick="toggle_visibility('output');">See Total</button></p>
             <!-- This is where I'll put the output of the total -->
             <p id="output"></p>
     </form>
