Finishing touches on Buisness Site project

--- a/playground/index.html
+++ b/playground/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="#" onclick="toggle_visibility('foo');">Click here to toggle visibility of element #foo</a>
-    <div id="foo">This is foo</div>
-    <script src="app.js"></script>
+   <nav class="container">
+       <div class="box">This</div>
+       <div class="box">Is A</div>
+       <div class="box">Nav Bar</div>
+   </nav>
+    
 </body>
 </html>
