--- a/projects/Business Time site/index.html
+++ b/projects/Business Time site/index.html
@@ -9,16 +9,21 @@
 </head>
 <body>
     <nav class="container">
-        <div><a>Home</a></div>
-        <div><a>Gallery</a></div>
-        <div><a>Upcoming</a></div>
-        <div><a>About</a></div>
+        <div><a href="index.html">Home</a></div>
+        <div><a href="gallery.html">Gallery</a></div>
+        <div><a href="upcoming.html">Upcoming</a></div>
+        <div><a href="about.html">About</a></div>
     </nav>
     <section>
-        <h1>PhotoBiz</h1>
-        <article class="lorem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. 
-        </article>
-        <article class="lorem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi.  
+        <header>
+            <h1>PhotoBiz</h1>
+        </header>
+        <article>
+            <p class="lorem">If you want to see some samples, either click <span><a href="gallery.html">here</a></span> or on "Gallery" up above</p>
+            <p class="lorem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. 
+            </p>
+            <p class="lorem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi.  
+            </p>
         </article>
     </section>
     <section>
