Updates to business website

--- a/projects/Business Time site/gallery.html
+++ b/projects/Business Time site/gallery.html
@@ -12,7 +12,7 @@
         <div><a href="index.html">Home</a></div>
         <div><a href="gallery.html">Gallery</a></div>
         <div><a href="upcoming.html">Upcoming</a></div>
-        <div><a href="about.html">About</a></div>
+        <div><a href="contact.html">Contact</a></div>
     </nav>
     <header>
         <h1>Gallery</h1>
@@ -26,6 +26,9 @@
         </div>
         <div class="photos">
             <img src="photo3.jpg" alt="">
+        </div>
+        <div class="photos">
+            <img src="waterfall.jpg" alt="">
         </div>
     </main>
 </body>
