--- a/projects/Business Time site/index.html
+++ b/projects/Business Time site/index.html
@@ -12,7 +12,7 @@
         <div><a href="index.html">Home</a></div>
         <div><a href="gallery.html">Gallery</a></div>
         <div><a href="upcoming.html">Upcoming</a></div>
-        <div><a href="about.html">About</a></div>
+        <div><a href="contact.html">Contact</a></div>
     </nav>
     <section>
         <header>
@@ -22,6 +22,9 @@
             <p class="lorem">If you want to see some samples, either click <span><a href="gallery.html">here</a></span> or on "Gallery" up above</p>
             <p class="lorem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. 
             </p>
+            <div class="photos">
+                <img src="waterfall.jpg" alt="">
+            </div>
             <p class="lorem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi.  
             </p>
         </article>
