--- a/projects/Business Time site/upcoming.html
+++ b/projects/Business Time site/upcoming.html
@@ -12,7 +12,7 @@
         <div><a href="index.html">Home</a></div>
         <div><a href="gallery.html">Gallery</a></div>
         <div><a href="upcoming.html">Upcoming</a></div>
-        <div><a href="about.html">About</a></div>
+        <div><a href="contact.html">Contact</a></div>
     </nav>
     <header>
         <h1>Upcoming</h1>
