Change made to :hover styling in css on business website

--- a/projects/Business Time site/index.html
+++ b/projects/Business Time site/index.html
@@ -33,6 +33,6 @@
         <article class="lorem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex laboriosam molestiae eos, placeat quam nulla esse perferendis beatae itaque optio blanditiis commodi, voluptate voluptatem a, illo repellendus non! Libero, animi.   
         </article>
     </section>
-    <footer class="footer">©PhotoBiz</footer>
+    <footer class="footer">© PhotoBiz 2018</footer>
 </body>
 </html>
