--- a/exercises/bugs-on-a-plane/index.html
+++ b/exercises/bugs-on-a-plane/index.html
@@ -14,7 +14,7 @@
         <input type="text" name="last-name">
         <label for="lastName">Last Name</label>
         <br>
-        <input type="digit" name="age">
+        <input type="number" name="age">
         <label for="age">Age</label>
         <br>
         <input type="radio" name="gender" value="male" id="male">
