--- a/projects/csszengarden/index.html
+++ b/projects/csszengarden/index.html
@@ -16,6 +16,7 @@
 	<!--[if lt IE 9]>
 	<script src="script/html5shiv.js"></script>
 	<![endif]-->
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <!--
