added more lines of code to display images in axios todo project, also added more react exercises

--- a/projects/axios-todo-practice/index.html
+++ b/projects/axios-todo-practice/index.html
@@ -14,7 +14,7 @@
     </div>
     <div>
         <h2><u>Create a New ToDo:</u></h2>
-        <h3>Todo Name:</h3>
+        <h3>Access ToDo Name:</h3>
         <input type="text" id="userAdd">
         <h3> Title:</h3>
         <input type="text" id="title">
@@ -22,6 +22,8 @@
         <input type="text" id="description">
         <h3>Price:</h3>
         <input type="number" id="price">
+        <h3>Add URL Image:</h3>
+        <input type="text" id="url">
         <button id="myBtn">Add New ToDo</button>
         <p id="addedTodo"></p>
     </div>
