--- a/projects/api-project/public/index.html
+++ b/projects/api-project/public/index.html
@@ -8,7 +8,7 @@
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
    
     <title>MovieSearch</title>
   </head>
