added a few more styling edits to api project

--- a/projects/mario-pest-control/index.html
+++ b/projects/mario-pest-control/index.html
@@ -16,7 +16,7 @@
                 <img src="https://vignette.wikia.nocookie.net/mario/images/b/b2/GoombaSM3DWArtwork.png/revision/latest?cb=20131111161124">
             </div>
             <p>Goombas: 5 Coins</p>
-            <input type="number" name="individual" value="goombas">
+            <input type="number" id="individual" value="goombas">
         </div>
 
         <div>
