--- a/toggle/public/index.html
+++ b/toggle/public/index.html
@@ -10,12 +10,6 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-   <style>
-    body {
-      background-image: 
-      linear-gradient(to right,#632a1c, rgb(255, 196, 0))
-     }
-   </style>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>EncryptMe</title>
+    <title>React App</title>
   </head>
   <body>
     <noscript>
