added styling to work better on iOS devices

--- a/projects/api-project/public/index.html
+++ b/projects/api-project/public/index.html
@@ -13,7 +13,7 @@
     <title>MovieSearch</title>
   </head>
   <body>
-    <div class="statusbar-overlay"></div>
+    <div class="for-iOS"></div>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
